Ticket: Render comments in web view
Added ticket.getComments() to get comment instances for a ticket instance.

--- a/views/ticket-view.hbs
+++ b/views/ticket-view.hbs
@@ -6,3 +6,10 @@
 {{/if}}
 
 {{{body}}}
+
+{{#each comments}}
+<div>
+	{{userLink user}} {{timeSince created}}
+	<div>{{{body}}}</div>
+</div>
+{{/each}}
