Web: Use proper REST URLs
Ref #45

--- a/views/ticket-new.hbs
+++ b/views/ticket-new.hbs
@@ -1,6 +1,6 @@
 <h1>Create a New Ticket</h1>
 
-<form method="post" action="/ticket/new">
+<form method="post" action="/tickets">
 	<div>
 		<label for="title">Title:</label>
 		<input id="title" name="title" required>
