Web: Initial styling

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,15 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<title>{{app.title}}</title>
+	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
 {{#if activeUser}}
 	logged in as {{activeUser.username}}; <a href="/logout">logout</a>
 {{else}}
 	<a href="/login">login</a>
 {{/if}}
 
+<div class="main">
 {{{body}}}
+</div>
+
 </body>
 </html>
