--- a/views/ticket-new.hbs
+++ b/views/ticket-new.hbs
@@ -1,4 +1,4 @@
-<div class="content-box">
+{{#contentBox}}
 	<form method="post" action="/tickets">
 		<header class="content-header">
 			<h2>Create a new ticket</h2>
@@ -11,4 +11,4 @@
 			<button type="submit">Create ticket</button>
 		</div>
 	</form>
-</div>
+{{/contentBox}}
